Fix to bullet alignment / sizing

--- a/src/components/contracts.sass
+++ b/src/components/contracts.sass
@@ -29,13 +29,13 @@
     line-height: 1.5
 
 .contracts > ul
-    margin-left: 0
-    list-style: inside
+    margin-left: 1em
+    list-style: outside
 
 .contracts > ul > li
     font-size: 1.5em
     &::marker
-        font-size: .65em
+        font-size: 14px
 
 .contracts > ul > li > p
     font-size: 1em
